<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartphone FTP</string>
    <string name="action_settings">Settings</string>
    <string name="con_select">Select Connection</string>
    <string name="con_title">Connection name</string>
    <string name="con_title_hint">Give a name</string>
    <string name="con_host">Host</string>
    <string name="con_port">Port</string>
    <string name="con_user">Username</string>
    <string name="con_pass">Password</string>
    <string name="con_btn_conn">Connect</string>
    <string name="con_btn_save">Save</string>
    <string name="con_btn_edit">Edit</string>
    <string name="con_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="activity_edit_title">Edit connection</string>
    <string name="title_activity_filebrowser">Files</string>

</resources>